# mod_replace

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  mod_replace.load  mod_replace.load.in
.github/: README.md
.github/workflows/: build.yml  test.yml
benchmark/: ALGORITHM_COMPARISON.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_EN.md  BENCHMARK_USAGE.md  FINAL_BENCHMARK_RESULTS.md  OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_COMPARISON.md  QSORT_OPTIMIZATION_EN.md  QSORT_OPTIMIZATION_RESULTS.md  README.md  V1.2.0_IMPLEMENTATION_SUMMARY.md  VARIABLE_OPTIMIZATION_PROPOSAL.md  VARIABLE_PERFORMANCE_ANALYSIS.md  generate_test_data.py  patterns.txt  patterns_vars_heavy.txt  patterns_with_vars.txt  performance_benchmark  performance_benchmark.c  run_comprehensive_test.sh  test_content.html  test_content_100kb.html  test_content_10kb.html  test_content_500kb.html  test_content_50kb.html
inc/: aho_corasick.h
src/: aho_corasick.c  mod_replace.c
test/: benchmark_callback  benchmark_callback.c  test_aho_corasick.c  test_callback  test_callback.c  test_standalone.c
